подправлен перевод(текст с hh заменен на hh, superjob и тп), исправлены ошибки с перепутанными контейнерами в html кодах

--- a/frontend/src/app/components/Generation/cover-letter-generate/cover-letter-generate.component.html
+++ b/frontend/src/app/components/Generation/cover-letter-generate/cover-letter-generate.component.html
@@ -195,7 +195,7 @@
       <div class="letter-actions">
           <button 
               pButton 
-              [label]="'BUTTON.SEND_TO_HH' | translate" 
+              [label]="'BUTTON.SEND_TO_JOB_PLATFORMS' | translate" 
               icon="pi pi-send"
               [disabled]="isSending"
               (click)="sendToHH()">
