--- a/frontend/src/app/components/Pages/about/about/about.html
+++ b/frontend/src/app/components/Pages/about/about/about.html
@@ -29,8 +29,8 @@
           <div class="feature-icon">
             <i class="pi pi-briefcase"></i>
           </div>
-          <h3>{{ 'ABOUT.FEATURES.HH_INTEGRATION' | translate }}</h3>
-          <p>{{ 'ABOUT.FEATURES.HH_INTEGRATION_DESC' | translate }}</p>
+          <h3>{{ 'ABOUT.FEATURES.JOB_PLATFORMS_INTEGRATION' | translate }}</h3>
+          <p>{{ 'ABOUT.FEATURES.JOB_PLATFORMS_INTEGRATION_DESC' | translate }}</p>
         </div>
 
         <div class="feature-card">
